--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Office Lights Demo.loader.js";
+      var loaderUrl = buildUrl + "/OfficeLightsDemo Done.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Office Lights Demo.data.unityweb",
-        frameworkUrl: buildUrl + "/Office Lights Demo.framework.js.unityweb",
-        codeUrl: buildUrl + "/Office Lights Demo.wasm.unityweb",
+        dataUrl: buildUrl + "/OfficeLightsDemo Done.data.unityweb",
+        frameworkUrl: buildUrl + "/OfficeLightsDemo Done.framework.js.unityweb",
+        codeUrl: buildUrl + "/OfficeLightsDemo Done.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project (3)",
